--- a/first.html
+++ b/first.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Week 1 lab</h1>
+    <h2>Welcome to FSD lab</h2>
     <p>So, what is Git in a nutshell?
     This is an important section to absorb, 
     because if you understand what Git is and the fundamentals of how it works,
